[package]
name = "calendar-join"
version = "0.1.0"
edition = "2021"
authors = [ "Florian Schubert" ]
description = "A Program that joins two ore more ICal files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icalendar = "0"
reqwest = { version = "0", features = ["blocking"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "color"]  }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
actix-web = "4.5.1"
lazy_static = "1.4.0"
tokio = { version = "1.37.0", features = ["full"]}
async-std = "1.12"
